[gd_scene load_steps=31 format=3 uid="uid://tmklomocei44"]

[ext_resource type="PackedScene" uid="uid://cjkp3j8j1185c" path="res://scenes/component/health_component.tscn" id="1_h031v"]
[ext_resource type="Script" path="res://scenes/game_object/torch_goblin/torch_goblin.gd" id="1_hcetu"]
[ext_resource type="Texture2D" uid="uid://clj6rc86tk6ex" path="res://scenes/game_object/torch_goblin/Torch_Purple.png" id="1_vv6sc"]
[ext_resource type="PackedScene" uid="uid://c1e5gj8tp2epq" path="res://scenes/controller/torch_goblin_skill_controller.tscn" id="2_b8kja"]
[ext_resource type="Shader" uid="uid://byusmtqkyajce" path="res://shader/hit_shader.tres" id="3_opvf7"]
[ext_resource type="PackedScene" uid="uid://4s7pl2xxoxgu" path="res://scenes/component/drop_component.tscn" id="3_svep8"]
[ext_resource type="PackedScene" uid="uid://btxug3i7wwktw" path="res://scenes/component/hitbox_component.tscn" id="4_fqtdc"]
[ext_resource type="PackedScene" uid="uid://cxkjlwmte4qvn" path="res://scenes/component/death_component.tscn" id="5_4asgr"]
[ext_resource type="PackedScene" uid="uid://2o1fmtbf8q3i" path="res://scenes/component/hurtbox_component.tscn" id="5_5oxsu"]
[ext_resource type="AudioStream" uid="uid://gpns625n616c" path="res://assets/audio/mixkit-soft-quick-punch-2151.ogg" id="8_e0dfo"]
[ext_resource type="PackedScene" uid="uid://dke1v7ecmc3hw" path="res://scenes/component/random_stream_player_2d_component.tscn" id="11_oaiiu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x3q5j"]
shader = ExtResource("3_opvf7")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s6t8f"]
resource_local_to_scene = true
shader = ExtResource("3_opvf7")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_ulgup"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/SideCollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/UpCollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent/DownCollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_et0xy"]
resource_name = "attack_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/DownCollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_wk6on"]
resource_name = "attack_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/SideCollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_ed2e0"]
resource_name = "attack_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/UpCollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_72hxs"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_lkenh"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgshe"]
_data = {
"RESET": SubResource("Animation_ulgup"),
"attack_down": SubResource("Animation_et0xy"),
"attack_side": SubResource("Animation_wk6on"),
"attack_up": SubResource("Animation_ed2e0"),
"idle": SubResource("Animation_72hxs"),
"walk": SubResource("Animation_lkenh")
}

[sub_resource type="Animation" id="Animation_f040a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rkxll"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_usj2k"]
_data = {
"RESET": SubResource("Animation_f040a"),
"hit_flash": SubResource("Animation_rkxll")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ok8ra"]
radius = 500.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpgjl"]
size = Vector2(101.75, 97.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qukoo"]
size = Vector2(135, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gug6b"]
size = Vector2(132, 58.75)

[sub_resource type="CircleShape2D" id="CircleShape2D_aajgi"]
radius = 37.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7x3a5"]
radius = 17.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p00ty"]
radius = 199.003

[node name="TorchGoblin" type="CharacterBody2D" groups=["enemy"]]
material = SubResource("ShaderMaterial_x3q5j")
collision_layer = 4
collision_mask = 5
script = ExtResource("1_hcetu")

[node name="TorchGoblinSkillController" parent="." instance=ExtResource("2_b8kja")]

[node name="HealthComponent" parent="." instance=ExtResource("1_h031v")]
max_health = 30.0

[node name="DropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_svep8")]
health_component = NodePath("../HealthComponent")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_4asgr")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("11_oaiiu")]
streams = Array[AudioStream]([ExtResource("8_e0dfo")])

[node name="PatrollingTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_s6t8f")
texture = ExtResource("1_vv6sc")
offset = Vector2(0, -32)
hframes = 7
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lgshe")
}

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_usj2k")
}

[node name="SightArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea2D"]
position = Vector2(-1, -25)
shape = SubResource("CircleShape2D_ok8ra")

[node name="HitboxComponent" parent="." instance=ExtResource("4_fqtdc")]
collision_layer = 8

[node name="SideCollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(51.125, -45)
shape = SubResource("RectangleShape2D_hpgjl")
disabled = true

[node name="UpCollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(1, -79)
shape = SubResource("RectangleShape2D_qukoo")
disabled = true

[node name="DownCollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(1, 18.625)
shape = SubResource("RectangleShape2D_gug6b")
disabled = true

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_5oxsu")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(1, -33)
shape = SubResource("CircleShape2D_aajgi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_7x3a5")

[node name="AttackRangeArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeArea2D"]
position = Vector2(0, -35)
shape = SubResource("CircleShape2D_p00ty")
